# lightforge

./: .env  .gitignore  1763169701284.txt  ADDING_NEW_CONNECTION_TYPES.md  AGENT_ARCHITECTURE_COMPLETE.md  AGENT_BREADCRUMB_ARCHITECTURE.md  AGENT_BREADCRUMB_IMPLEMENTATION.md  AGENT_CONFIG_UI_COMPLETE.md  AGENT_EXECUTION_ARCHITECTURE.md  AGENT_EXECUTOR_REFACTOR.md  AGENT_HELPER_TOOL_GUIDE.md  AGENT_HOT_RELOAD_FIXED.md  AGENT_HOWTO_SYSTEM.md  AGENT_LLM_CONFIG_FIX.md  AGENT_NEEDS_CONFIG.md  AGENT_REGISTRATION_FIX.md  AGENT_RUNNER_FIX_SUMMARY.md  ALL_AGENTS_UPDATED.md  ALL_TOOLS_COMPLETE.md  ANOTHER_FALLBACK_REMOVED.md  BLACKLIST_ARCHITECTURE.md  BOOTSTRAP_CONSOLIDATION_PLAN.md  BOOTSTRAP_IS_NOW_PERFECT.md  BOOTSTRAP_SINGLE_SOURCE_OF_TRUTH.md  BOOTSTRAP_SYSTEM_ANALYSIS.md  BREADCRUMB_TTL_UPDATE.md  BROWSER_CONTEXT_IMPLEMENTATION_SUMMARY.md  BROWSER_CONTEXT_READY_TO_TEST.md  BROWSER_EXTENSION_GUIDE.md  BUILD_FIX_SUMMARY.md  BUILD_STATUS.md  CHANGELOG.md  CHAT_AGENT_BOOTSTRAP_REQUIREMENTS.md  CLEAN_CONTEXT_EXAMPLE.md  CLEAN_IMPLEMENTATION_COMPLETE.md  CLEAN_TOOL_DESIGN_IMPLEMENTED.md  COMPLETE_ENDPOINT_FIX_SUMMARY.md  COMPLETE_IMPLEMENTATION_AND_DEPLOY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_SECRETS_SYSTEM_SUMMARY.md  (+229 more)
bootstrap-breadcrumbs/: README.md  bootstrap.js  package-lock.json  package.json
crates/rcrt-context-builder/: Cargo.toml  Dockerfile
crates/rcrt-context-builder/src/: agent_config.rs  config.rs  entity_extractor.rs  entity_worker.rs  event_handler.rs  llm_config.rs  main.rs  rcrt_client.rs  vector_store.rs
crates/rcrt-context-builder/src/graph/: builder_service.rs  cache.rs  cache_updater.rs  edge_builder.rs  loader.rs  mod.rs  types.rs
crates/rcrt-context-builder/src/output/: mod.rs  publisher.rs
crates/rcrt-context-builder/src/retrieval/: assembler.rs  mod.rs  path_finder.rs
crates/rcrt-core/: Cargo.toml
crates/rcrt-core/src/: db.rs  lib.rs  models.rs
crates/rcrt-dashboard/: Cargo.toml  Dockerfile  README.md  REFACTORING_SUMMARY.md  UX_IMPROVEMENTS.md
crates/rcrt-dashboard/src/: admin_handlers.rs  auth.rs  handlers.rs  main.rs  models.rs  sse_handlers.rs
crates/rcrt-dashboard/static/: connection-debug.html  debug.html  index.html
crates/rcrt-dashboard/static/css/: dashboard.css
crates/rcrt-dashboard/static/js/: .babelrc  .eslintrc.js  PRODUCTION_READY.md  REFACTORING_GUIDE.md  build.sh  dashboard-main.js  dashboard.js  package.json  tsconfig.json  webpack.config.js
crates/rcrt-dashboard/static/js/modules/: 3d-engine.js  admin-manager.js  api-client.js  canvas-engine.js  chat-manager.js  crud-manager.js  dashboard-controller.js  event-stream.js  node-renderer.js  secrets-manager.js  state.js  super-agent-chat.js  ui-manager.js
crates/rcrt-dashboard/static/js/types/: dashboard.d.ts
crates/rcrt-server/: Cargo.toml
crates/rcrt-server/src/: embedding_policy.rs  hygiene.rs  main.rs  transforms.rs
debug/: debug.md
desktop-build/: DATABASE_RESET.md  FINAL_INSTALLER.md  FINAL_STATUS.md  FIX_DOCKER_STARTUP.md  INSTALLER_READY.md  QUICK_BUILD.md  README-PODMAN.md  README.md  START_HERE.md  START_WITH_DOCKER.md  SUCCESS.md  build.sh  docker-compose-runtime.yml  reset-database.bat  save-docker-images.sh
docs/: ADDING_TOOLS_GUIDE.md  AGENT_RUNNER_CURRENT.md  AGENT_VS_TOOLS_RUNNER_COMPARISON.md  ARCHITECTURAL_INSIGHTS_SESSION.md  AUTO_DEPENDENCY_DETECTION_ANALYSIS.md  AUTO_DEPS_GENERIC_PROOF.md  Agentic_E2E_Walkthrough.md  BACK_TO_RCRT_PRINCIPLES.md  BLACKLIST_APPROACH.md  BOOTSTRAP_SYSTEM.md  BREADCRUMB_CRUD_SUCCESS.md  BREADCRUMB_IO_PORT_ARCHITECTURE.md  BREADCRUMB_VIEWS_AND_PORTS.md  BROWSER_CONTEXT_ARCHITECTURE.md  BROWSER_CONTEXT_BREADCRUMB.md  BROWSER_CONTEXT_COMPLETE_IMPLEMENTATION.md  CLEANUP_SUMMARY.md  CLEAN_UNIVERSAL_EXECUTOR_DESIGN.md  COMPONENT_REFERENCE_CARD.md  CONTEXT_BUILDER_DEPLOYMENT.md  CONTEXT_BUILDER_FIXES.md  CONTEXT_BUILDER_MIGRATION.md  CONTEXT_BUILDER_RUST.md  CURRENT_STATUS_HONEST_ASSESSMENT.md  CURRENT_SYSTEM_OVERVIEW.md  DASHBOARD_DUPLICATE_TOOLS_FIX.md  DASHBOARD_TOOL_CONFIG_FIX.md  DEEP_INVESTIGATION_FINDINGS.md  DEPLOYMENT.md  EVENT_DRIVEN_ARCHITECTURE_FIX.md  FAST_POC_PLAN.md  HYBRID_SEARCH_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Integration_Guide.md  KNOWLEDGE_BASE_SYSTEM.md  LEGACY_TOOL_PURGE.md  LLMHINTS_BREAKTHROUGH.md  LLM_HINTS_NOT_WORKING.md  LOCAL_EVENT_BUS_SOLUTION.md  MIGRATION_STATUS.md  (+71 more)
examples/: BROWSER_CONTEXT_QUICKSTART.md
extension/: BROWSER_CONTEXT_FEATURE.md  BUILD_AND_INSTALL.md  CLEANUP_SUMMARY.md  EXTENSION_SERVICE_WORKER_FIXED.md  RCRT_INTEGRATION.md  README.md  SERVICE_WORKER_SLEEP_FIX.md  START_RCRT.md  TESTING.md  TESTING_SSE.md  dev.html  manifest.json  package-lock.json  package.json  tailwind.config.js  test-connection.html  test-token.txt  tsconfig.json  vite.config.ts
heroui-templates/: seed-heroui.js  summary.json  ui-assets.json  ui-components.json  ui-templates.json
migrations/: 0001_init.sql  0002_webhooks_idempotency.sql  0003_webhook_dedupe.sql  0004_webhook_dlq.sql  0005_secret_audit.sql  (+6 more)
(+602 files in other folders)
