[workspace]
members = [
  "crates/rcrt-core",
  "crates/rcrt-server",
  "crates/rcrt-dashboard",
  "crates/rcrt-context-builder"
]
resolver = "2"

# Keep non-Rust folders out of the Docker build context to avoid multi-GB transfers
# Build image uses only crates/ and migrations/ copied in Dockerfile


 
