[package]
name = "rcrt-context-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "json", "chrono"] }
pgvector = { version = "0.3", features = ["sqlx", "serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# IDs and time
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Core types
rcrt-core = { path = "../rcrt-core" }

# Environment
dotenvy = "0.15"

# LRU cache for session graphs
lru = "0.12"

# Graph data structures
petgraph = "0.6"

# Entity extraction (ONNX for hybrid search)
ort = { version = "2.0.0-rc.9", features = ["half"] }  # ONNX Runtime
tokenizers = "0.19"  # Tokenizer for text processing
regex = "1"  # For simple keyword extraction

# Configuration (optional - not used in MVP)
# config = "0.14"

