[package]
name = "rcrt-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde", "macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "json", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
pgvector = { version = "0.3", features = ["sqlx", "serde"] }


