[package]
name = "rcrt-dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
axum = { version = "0.7", features = ["macros", "json", "tracing"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
futures-core = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
futures-util = { version = "0.3", features = ["io"] }
tokio-util = { version = "0.7", features = ["io"] }
